# pock

./: .gitignore  .travis.yml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: Makefile  modules.rst  pock.rst  pock.shell.rst
doc/source/: conf.py  index.rst
pock/: __init__.py  pock_shell.py
pock/api/: base.py  exceptions.py  resources.py  utils.py
pock/shell/: __init__.py  cluster.py  resource.py
pock/tests/: __init__.py
pock/tests/api/: test_resource_manager.py  test_utils.py  utils.py
pock/tests/fixtures/: crm_mon.txt
pock/tests/fixtures/resources/: crm_mon.txt  resources.xml
pock/tests/shell/: test_resources.py
