[metadata]
name = pock
summary = Pacemaker library
description-file = README.rst
author = MechaXL
author-email = mechaxl@gmail.com
home-page = https://github.com/mechaxl/pock
classifier =
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.3

[files]
packages = pock

[entry_points]
console_scripts =
    pock = pock.shell:pock_cli

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
